# iec61850_open_server

./: .gitattributes  CMakeLists.txt  Dockerfile.circuit_simulator  Dockerfile.libiec61850_server  LICENSE.md  Makefile  README.md  TODO.txt  cbr_simulator.config  local_test.sh  make_compose.sh  make_model.sh  open_server.c  open_substation.scd  proj.code-workspace  substation.simulator.yml  substation.yml
LNs/: CILO.c  CSWI.c  LLN0.c  LNParse.c  MMXU.c  PDIF.c  PDIS.c  PIOC.c  PTOC.c  PTRC.c  RADR.c  RBDR.c  RDRE.c  RREC.c  SMVPublisher.c  TCTR.c  TVTR.c  XCBR.c  XSWI.c
cfg/: IED1_XCBR.cfg  IED1_XCBR.ext  IED2_PTOC.cfg  IED2_PTOC.ext  IED3_SMV.cfg  IED3_SMV.ext  IED4_SMV.cfg  IED4_SMV.ext  PROT_RELAIS.cfg  PROT_RELAIS.ext
circuit_simulator/: README.md  Requirements.txt  circuit_simulator.py  requirements.txt  test_IEDserver.py  webAPI.py
circuit_simulator/models/: CBR.subckt  CTR.subckt  DIS.subckt  IFL.subckt  PTR.subckt  VTR.subckt  load.subckt
circuit_simulator/static/: simulator.js
circuit_simulator/static/css/: layout.css
circuit_simulator/templates/: index.html
inc/: CILO.h  CSWI.h  LLN0.h  LNParse.h  MMXU.h  PDIF.h  PDIS.h  PIOC.h  PTOC.h  PTRC.h  RADR.h  RBDR.h  RDRE.h  RREC.h  SMVPublisher.h  TCTR.h  TVTR.h  XCBR.h  XSWI.h  iec61850_config_file_parser_extensions.h  iec61850_dynamic_model_extensions.h  iec61850_ln_extensions.h  iec61850_model_extensions.h  inputs_api.h  lib_memory.h  libiec61850_platform_includes.h  open_server.h  simulation_config.h  stack_config.h  string_utilities.h  timestep_config.h
input/: inputs.c
model/: config_file_parser_extensions.c  dynamic_model_extensions.c
model_input_generator/: build2_inp.sh  build_docker.sh  build_inp.sh  manifest-docker.mf  manifest-dynamic_inp.mf  manifest_inp.mf
model_input_generator/src/com/libiec61850/scl/model/: ExtRef.java  Inputs.java  LogicalNode.java
model_input_generator/src/com/libiec61850/tools/: DockerComposeGenerator.java  DynamicModelGenerator_input.java  StaticModelGenerator_input.java
plugin/: local_sample_simulator.config.off
plugin/python_app/: app.py  lib61850.py  python_plugin.py
plugin_src/: CMakeLists.txt
plugin_src/cbr_process/: CMakeLists.txt  main.c
plugin_src/cbr_simulation/: CMakeLists.txt  main.c
plugin_src/ctr_simulation/: CMakeLists.txt  main.c
plugin_src/local_sample_simulation/: CMakeLists.txt  main.c
plugin_src/python/: CMakeLists.txt  main.c  python_plugin.h
plugin_src/simulation_process/: CMakeLists.txt  simulation.c
scd/: open_substation.scd  protection_relay.scd
schema/: SCL.xsd  SCL_BaseSimpleTypes.xsd  SCL_BaseTypes.xsd  SCL_Communication.xsd  SCL_Coordinates.xsd  SCL_DataTypeTemplates.xsd  SCL_Enums.xsd  SCL_IED.xsd  SCL_Namespaces.xsd  SCL_Substation.xsd
vmd-filestore/: comtrade_data.cfg
